--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -31,7 +31,9 @@
 }
 
 .login-intro {
-  margin: 0 auto;
+  /* margin: 0 auto; */
+  padding: 20px 20px;
+  /* border: 1px solid red; */
 }
 
 .bg-login {
@@ -44,7 +46,8 @@
 }
 
 .form-wrap {
-  /* padding: 20px 20px; */
+  padding: 20px 20px;
+  width: 100%;
 }
 
 @media only screen and (min-width: 767px) {
