--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -45,6 +45,15 @@
   height: 100vh;
 }
 
+.bg-signup {
+  background-image: url('../../assets/images/signup-bg.png');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+}
+
 .form-wrap {
   padding: 20px 20px;
   width: 100%;
