--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   --tertiary: #f8f5f2;
 
   --gray-one: #c4c4c4;
+  --gray-two: #4f4f4f;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -27,8 +28,11 @@ h1,h2,h3,h4,h5,h6 {
 
 h1,h2,h3 {
   margin-bottom: 30px;
-  font-weight: 500;
-  
+  font-weight: 500;  
+}
+
+p {
+  color: var(--gray-two)
 }
 
 .App {
@@ -79,4 +83,15 @@ h1,h2,h3 {
 
 .f-xxlg {
   flex: 0 0 80%;
+}
+
+.btn {
+  margin-top: 1rem;
+  background: var(--header-bg);
+  width: 100%;
+  height: 6vh;
+}
+
+.btn-submit {
+  color: var(--btn-txt1);
 }
