Create a responsive card ui

--- a/src/components/account card/AccountCard.css
+++ b/src/components/account card/AccountCard.css
@@ -1,25 +1,25 @@
 .card-wrap {
   flex-wrap: wrap;
   justify-content: center;
-
+  margin: 0 auto;
+  width: 100%;
+  margin-top: 4rem;
 }
 
 @media only screen and (min-width: 767px) {
   .card-wrap {
-    /* width: 100%; */
+    width: 80%;
   }
 }
 
 @media only screen and (min-width: 1032px) {
   .card-wrap {
-    /* width: 100%; */
+    width: 70%;
   }
 }
 
 .card-md {
-  margin: 0 auto;
-  width: 80%;
-  height: 20vh;
+  width: 100%;
   justify-content: flex-start;
   border-radius: 3px;
   box-shadow: 0 10px 45px 0 rgb(0 0 0 / 10%);
@@ -28,8 +28,50 @@
   background-color: var(--btn-txt1);
 }
 
+@media only screen and (min-width: 767px) {
+  .card-md {
+    /* width: 60%; */
+  }
+}
+
+@media only screen and (min-width: 767px) {
+  .card-style {
+    width: 60%;
+  }
+}
+
+.card-mr {
+  flex: 0 0 60%;
+}
+
+@media only screen and (min-width: 767px) {
+  .card-mr {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+}
+
+.card-ms {
+  justify-self: flex-start;
+  align-self: flex-start;
+  flex: 0 0 70%;
+}
+
+@media only screen and (min-width: 767px) {
+  .card-ms {
+    flex: 0 0 40%;
+    max-width: 40%;
+    margin-left: 3rem;
+  }
+}
+
+.trans-wrap {
+  width: 100%;
+}
+
 .bal {
-  color: var(--btn-color1);
+  color: var(--paragraph);
+  text-align: center;
 }
 
 .bal-val {
@@ -80,10 +122,6 @@
   width: 80%;
   margin-bottom: 30px;
   padding: 20px;
-  border-radius: 3px;
-  box-shadow: 0 10px 45px 0 rgb(0 0 0 / 10%);
-  background-color: var(--btn-txt1);
-
 }
 
 .card-send {
@@ -103,7 +141,8 @@
 
 .send-heading {
   color: var(--headline);
-  margin-bottom: 2rem;
+  margin-bottom: 0.7034rem;
+  /* margin-left: 3rem; */
 }
 
 .user-div {
@@ -138,6 +177,10 @@
   border: none;
 }
 
+.form-input::placeholder {
+  padding-left: 2rem;
+}
+
 .price-row {
   margin-top: 20px;
   align-items: flex-start;
@@ -153,12 +196,6 @@
 
 .price-sel:first-child {
   margin-left: 0;
-}
-
-
-.trans-wrap {
-  padding: 20px;
-  width: 100%;
 }
 
 .trans-card {
